[package]
name = "rust-libp2p-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56", features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "request-response",
    "cbor",
] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }