[package]
name = "rust-libp2p-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56", features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "mdns",
    "gossipsub",
    "request-response",
    "identify",
    "kad",
    "cbor",
] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
libp2p-stream = "0.4.0-alpha"
zerocopy = "0.7"
bytes = "1.5"
